--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <a href="#">Contact</a>
       </nav>
 
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  <div><img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </div>
   </header>
 
   <section class="cta">
@@ -79,6 +80,6 @@
 
   <footer>
       <p>Copyright Great Idea! 2018</p>
-  </footer>!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  </footer>
 </body>
 </html>
